package com.campito.backend.dao;

import org.springframework.data.jpa.repository.JpaRepository;

import com.campito.backend.model.EspacioTrabajo;

public interface EspacioTrabajoRepository extends JpaRepository<EspacioTrabajo, Long> {

}
