package com.campito.backend.model;

public enum TipoTransaccion {
    INGRESO,
    GASTO
}
