--
-- PostgreSQL database dump
--

-- Dumped from database version 14.18 (Debian 14.18-1.pgdg120+1)
-- Dumped by pg_dump version 14.18 (Debian 14.18-1.pgdg120+1)

SET statement_timeout = 0;
SET lock_timeout = 0;
SET idle_in_transaction_session_timeout = 0;
SET client_encoding = 'UTF8';
SET standard_conforming_strings = on;
SELECT pg_catalog.set_config('search_path', '', false);
SET check_function_bodies = false;
SET xmloption = content;
SET client_min_messages = warning;
SET row_security = off;

SET default_tablespace = '';

SET default_table_access_method = heap;

--
-- Name: contactos_transferencia; Type: TABLE; Schema: public; Owner: campito_user
--

CREATE TABLE public.contactos_transferencia (
    id bigint NOT NULL,
    id_espacio_trabajo bigint NOT NULL,
    nombre character varying(50) NOT NULL
);


ALTER TABLE public.contactos_transferencia OWNER TO campito_user;

--
-- Name: contactos_transferencia_id_seq; Type: SEQUENCE; Schema: public; Owner: campito_user
--

ALTER TABLE public.contactos_transferencia ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.contactos_transferencia_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: espacios_trabajo; Type: TABLE; Schema: public; Owner: campito_user
--

CREATE TABLE public.espacios_trabajo (
    saldo real NOT NULL,
    id bigint NOT NULL,
    usuario_admin_id bigint NOT NULL,
    nombre character varying(50) NOT NULL
);


ALTER TABLE public.espacios_trabajo OWNER TO campito_user;

--
-- Name: espacios_trabajo_id_seq; Type: SEQUENCE; Schema: public; Owner: campito_user
--

ALTER TABLE public.espacios_trabajo ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.espacios_trabajo_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: espacios_trabajo_usuarios; Type: TABLE; Schema: public; Owner: campito_user
--

CREATE TABLE public.espacios_trabajo_usuarios (
    espacio_trabajo_id bigint NOT NULL,
    usuario_id bigint NOT NULL
);


ALTER TABLE public.espacios_trabajo_usuarios OWNER TO campito_user;

--
-- Name: motivos_transaccion; Type: TABLE; Schema: public; Owner: campito_user
--

CREATE TABLE public.motivos_transaccion (
    id bigint NOT NULL,
    id_espacio_trabajo bigint NOT NULL,
    motivo character varying(50) NOT NULL
);


ALTER TABLE public.motivos_transaccion OWNER TO campito_user;

--
-- Name: motivos_transaccion_id_seq; Type: SEQUENCE; Schema: public; Owner: campito_user
--

ALTER TABLE public.motivos_transaccion ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.motivos_transaccion_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: notificaciones; Type: TABLE; Schema: public; Owner: campito_user
--

CREATE TABLE public.notificaciones (
    id bigint NOT NULL,
    usuario_id bigint NOT NULL,
    mensaje character varying(255) NOT NULL
);


ALTER TABLE public.notificaciones OWNER TO campito_user;

--
-- Name: notificaciones_id_seq; Type: SEQUENCE; Schema: public; Owner: campito_user
--

ALTER TABLE public.notificaciones ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.notificaciones_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: presupuestos; Type: TABLE; Schema: public; Owner: campito_user
--

CREATE TABLE public.presupuestos (
    monto real NOT NULL,
    umbral_alerta real NOT NULL,
    espacio_trabajo_id bigint NOT NULL,
    id bigint NOT NULL,
    motivo_id bigint,
    periodo_fin timestamp(6) without time zone NOT NULL,
    periodo_inicio timestamp(6) without time zone NOT NULL
);


ALTER TABLE public.presupuestos OWNER TO campito_user;

--
-- Name: presupuestos_id_seq; Type: SEQUENCE; Schema: public; Owner: campito_user
--

ALTER TABLE public.presupuestos ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.presupuestos_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: transacciones; Type: TABLE; Schema: public; Owner: campito_user
--

CREATE TABLE public.transacciones (
    fecha date NOT NULL,
    monto real NOT NULL,
    contacto_transferencia_id bigint,
    espacio_trabajo_id bigint NOT NULL,
    fecha_creacion timestamp(6) without time zone NOT NULL,
    id bigint NOT NULL,
    motivo_transaccion_id bigint NOT NULL,
    descripcion character varying(100),
    nombre_completo_auditoria character varying(100) NOT NULL,
    tipo character varying(255) NOT NULL,
    CONSTRAINT transacciones_tipo_check CHECK (((tipo)::text = ANY ((ARRAY['INGRESO'::character varying, 'GASTO'::character varying])::text[])))
);


ALTER TABLE public.transacciones OWNER TO campito_user;

--
-- Name: transacciones_id_seq; Type: SEQUENCE; Schema: public; Owner: campito_user
--

ALTER TABLE public.transacciones ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.transacciones_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: usuarios; Type: TABLE; Schema: public; Owner: campito_user
--

CREATE TABLE public.usuarios (
    activo boolean NOT NULL,
    fecha_registro timestamp(6) without time zone NOT NULL,
    fecha_ultimo_acceso timestamp(6) without time zone,
    id bigint NOT NULL,
    proveedor character varying(50) NOT NULL,
    rol character varying(50) NOT NULL,
    email character varying(100) NOT NULL,
    nombre character varying(100) NOT NULL,
    foto_perfil character varying(256),
    id_proveedor character varying(256),
    CONSTRAINT usuarios_proveedor_check CHECK (((proveedor)::text = ANY ((ARRAY['GOOGLE'::character varying, 'FACEBOOK'::character varying, 'MICROSOFT'::character varying, 'MANUAL'::character varying])::text[])))
);


ALTER TABLE public.usuarios OWNER TO campito_user;

--
-- Name: usuarios_id_seq; Type: SEQUENCE; Schema: public; Owner: campito_user
--

ALTER TABLE public.usuarios ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.usuarios_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: contactos_transferencia contactos_transferencia_pkey; Type: CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.contactos_transferencia
    ADD CONSTRAINT contactos_transferencia_pkey PRIMARY KEY (id);


--
-- Name: espacios_trabajo espacios_trabajo_pkey; Type: CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.espacios_trabajo
    ADD CONSTRAINT espacios_trabajo_pkey PRIMARY KEY (id);


--
-- Name: motivos_transaccion motivos_transaccion_pkey; Type: CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.motivos_transaccion
    ADD CONSTRAINT motivos_transaccion_pkey PRIMARY KEY (id);


--
-- Name: notificaciones notificaciones_pkey; Type: CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.notificaciones
    ADD CONSTRAINT notificaciones_pkey PRIMARY KEY (id);


--
-- Name: presupuestos presupuestos_pkey; Type: CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.presupuestos
    ADD CONSTRAINT presupuestos_pkey PRIMARY KEY (id);


--
-- Name: transacciones transacciones_pkey; Type: CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.transacciones
    ADD CONSTRAINT transacciones_pkey PRIMARY KEY (id);


--
-- Name: usuarios usuarios_email_key; Type: CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.usuarios
    ADD CONSTRAINT usuarios_email_key UNIQUE (email);


--
-- Name: usuarios usuarios_pkey; Type: CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.usuarios
    ADD CONSTRAINT usuarios_pkey PRIMARY KEY (id);


--
-- Name: notificaciones fk1mxbjb81ft61gwlh0kabubndc; Type: FK CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.notificaciones
    ADD CONSTRAINT fk1mxbjb81ft61gwlh0kabubndc FOREIGN KEY (usuario_id) REFERENCES public.usuarios(id);


--
-- Name: transacciones fk56kgsmp5vtm0vn39g6004vorv; Type: FK CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.transacciones
    ADD CONSTRAINT fk56kgsmp5vtm0vn39g6004vorv FOREIGN KEY (motivo_transaccion_id) REFERENCES public.motivos_transaccion(id);


--
-- Name: transacciones fk7dmqj6730tpfbojlii0eg8lfv; Type: FK CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.transacciones
    ADD CONSTRAINT fk7dmqj6730tpfbojlii0eg8lfv FOREIGN KEY (espacio_trabajo_id) REFERENCES public.espacios_trabajo(id);


--
-- Name: transacciones fke67smv06tjmm7bv3jgy5rlpre; Type: FK CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.transacciones
    ADD CONSTRAINT fke67smv06tjmm7bv3jgy5rlpre FOREIGN KEY (contacto_transferencia_id) REFERENCES public.contactos_transferencia(id);


--
-- Name: presupuestos fkenm7468olgqao2ohb63vqhqc0; Type: FK CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.presupuestos
    ADD CONSTRAINT fkenm7468olgqao2ohb63vqhqc0 FOREIGN KEY (espacio_trabajo_id) REFERENCES public.espacios_trabajo(id);


--
-- Name: contactos_transferencia fkgij5m31e0w1r80bxbkeeuismu; Type: FK CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.contactos_transferencia
    ADD CONSTRAINT fkgij5m31e0w1r80bxbkeeuismu FOREIGN KEY (id_espacio_trabajo) REFERENCES public.espacios_trabajo(id);


--
-- Name: espacios_trabajo_usuarios fkgy1o8u3vlkkky6pv8quaq8sx5; Type: FK CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.espacios_trabajo_usuarios
    ADD CONSTRAINT fkgy1o8u3vlkkky6pv8quaq8sx5 FOREIGN KEY (usuario_id) REFERENCES public.usuarios(id);


--
-- Name: espacios_trabajo fkhete5fw8leajay2mcr3gw18rm; Type: FK CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.espacios_trabajo
    ADD CONSTRAINT fkhete5fw8leajay2mcr3gw18rm FOREIGN KEY (usuario_admin_id) REFERENCES public.usuarios(id);


--
-- Name: espacios_trabajo_usuarios fkn06wr27bco5ijhxgvwe7ueej4; Type: FK CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.espacios_trabajo_usuarios
    ADD CONSTRAINT fkn06wr27bco5ijhxgvwe7ueej4 FOREIGN KEY (espacio_trabajo_id) REFERENCES public.espacios_trabajo(id);


--
-- Name: presupuestos fkpmxsd2wvprtkwetnqrb6l5x0m; Type: FK CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.presupuestos
    ADD CONSTRAINT fkpmxsd2wvprtkwetnqrb6l5x0m FOREIGN KEY (motivo_id) REFERENCES public.motivos_transaccion(id);


--
-- Name: motivos_transaccion fktlofqnrwix83utgw86x10h6fc; Type: FK CONSTRAINT; Schema: public; Owner: campito_user
--

ALTER TABLE ONLY public.motivos_transaccion
    ADD CONSTRAINT fktlofqnrwix83utgw86x10h6fc FOREIGN KEY (id_espacio_trabajo) REFERENCES public.espacios_trabajo(id);


--
-- PostgreSQL database dump complete
--

